# Nocturn

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: # Nocturn — Product Requirements Documen.md  CNAME  Nocturn - Design Vision.md  design-vision.md  display-safety-technical-spec.md  index.html  product-requirements.md  robots.txt  sitemap.xml  styles.css
docs/plans/: 2026-03-07-frontend-redesign.md
public/: overlay.html
src/: App.tsx  OverlayCardApp.tsx  index.css  main.tsx  shortcuts.ts  types.ts  ui.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  cursor.rs  main.rs  monitor_info.rs  overlay.rs  panel.rs  settings.rs  shortcut.rs  shortcuts.rs  state.rs  window_inventory.rs
src/components/: DisplayCard.tsx  DisplayLayout.tsx  SettingsPage.tsx  ShortcutField.tsx  ShortcutKeycaps.tsx  Tooltip.tsx
src/hooks/: useDisplays.ts  useUpdater.ts
