[package]
name = "nocturn"
version = "0.1.4"
edition = "2024"
build = "build.rs"

[dependencies]
log = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = ["tray-icon", "unstable"] }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.0"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem", "Win32_System_LibraryLoader", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_Devices_Display"] }

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
